added async and changed all List for Page